<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/back"
            app:backgroundTint="#ffffff"
            app:fabSize="auto"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:rippleColor="@color/memo_add"
            android:contentDescription="Back"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="500" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/delete"
            app:backgroundTint="#ffffff"
            app:fabSize="auto"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:rippleColor="@color/memo_add"
            android:contentDescription="Delete"
            tools:ignore="HardcodedText" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:borderWidth="0dp"
            app:elevation="0dp"
            android:src="@drawable/save"
            app:backgroundTint="#ffffff"
            app:fabSize="auto"
            app:rippleColor="@color/memo_add"
            android:contentDescription="Save"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <!-- 标题的EditText -->
    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="title"
        android:background="@null"
        android:hint="@string/add_note_title"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/memo_text"
        android:textColorHint="@color/memo_text_ready"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            android:textColor="@color/memo_text_time"
            tools:ignore="TextContrastCheck" />
        <View
            android:layout_width="7dp"
            android:layout_height="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delimiter"
            android:textColor="@color/memo_text_ready"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
        <View
            android:layout_width="7dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/memo_text_time"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_"
            android:textColor="@color/memo_text_time"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <!-- 内容的EditText -->
    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:autofillHints="content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/start_writing"
        android:lineSpacingExtra="15dp"
        android:textColor="@color/memo_text"
        android:textColorHint="@color/memo_text_ready"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

</LinearLayout>