<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:backgroundTint="@color/memo_background"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"

            android:textSize="36sp"
            android:textColor="@color/black"
            android:text="@string/memo"/>
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="8dp"-->
<!--            android:id="@+id/tv_todo"-->
<!--            android:textSize="24sp"-->
<!--            android:textColor="@color/memo_gray"-->
<!--            android:text="@string/todo"/>-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="500" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="Add a new note"
            android:src="@drawable/add"
            app:backgroundTint="@color/memo_add"
            app:borderWidth="0dp"
            app:elevation="5dp"
            app:fabSize="auto"
            app:rippleColor="@color/memo_add"
            tools:ignore="HardcodedText,ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background">


        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="notes"
            android:background="@drawable/note_search_shape"
            android:backgroundTint="@color/memo_item"
            android:hint="@string/search_hint"
            android:inputType="textCapWords"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_memo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <ListView
        android:id="@+id/notes_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="@color/memo_background"
        android:divider="@color/memo_background"
        android:dividerHeight="5dp"
        android:paddingTop="8dp" />
</LinearLayout>